--- a/default.hbs
+++ b/default.hbs
@@ -52,12 +52,12 @@
                     {{/if}}
                 </div>
 
-                <a class="gh-head-button gh-head-search-button" href="javascript:showSearch()">{{> "icons/search"}}&nbsp;Search</a>
+                <a class="gh-head-button gh-head-search-button" href="javascript:showSearch()">{{> "icons/search"}}&nbsp;{{t "Search"}}</a>
 
                 {{#unless @member}}
-                    <a class="gh-head-button" href="#/portal/signup">Subscribe</a>
+                    <a class="gh-head-button" href="#/portal/signup">{{t "Subscribe"}}</a>
                 {{else}}
-                    <a class="gh-head-button" href="#/portal/account">Account</a>
+                    <a class="gh-head-button" href="#/portal/account">{{t "Account"}}</a>
                 {{/unless}}
             </div>
         </nav>
