--- a/partials/search-modal.hbs
+++ b/partials/search-modal.hbs
@@ -3,7 +3,7 @@
         <div class="main">
             <form>
                 {{> "icons/search"}}
-                <input id="search-field" placeholder="Search ..." autocomplete="off" autofocus/>
+                <input id="search-field" placeholder="{{t "Search"}} ..." autocomplete="off" autofocus/>
                 <span onClick="showSearch()">{{> "icons/close"}}</span>
             </form>
             <div id="results" onClick="showSearch()"></div>
